# integritee-node

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Jenkinsfile  README.md  about.hbs  about.toml  cantillonSpecPlain.json  cantillonSpecRaw.json  gesellSpecPlain.json  gesellSpecRaw.json  gesellv2Spec.json  gesellv2SpecRaw.json  interstellar.Dockerfile  rust-toolchain  rust-toolchain.toml  test
.cargo/: zepter.yaml
.github/workflows/: build.yml  ci.yml  delete-release.yml  publish-docker-release.yml  rust.yml
ci/: check_logs.sh  install_rust.sh
client/: Cargo.toml  README.md  bootstrap_demo_currency.sh  bot-community.py  demo_poc1.sh  dump.json  init_demo.sh  polkadot-js-apps-types.json  test.sh
client/src/: cli.yml  main.rs  wallet.rs
core/rest-client/: Cargo.toml  README.md
host_calls/: Cargo.toml
host_calls/src/: lib.rs  remote_attestation.rs
node/: Cargo.toml
node/res/: cranny.json  integritee-mainnet.json  integritee-solo.json
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  rpc.rs  service.rs
pallets/substratee-registry/: Cargo.toml
pallets/substratee-registry/host-calls/: Cargo.toml
pallets/substratee-registry/host-calls/src/: remote_attestation.rs
pallets/substratee-registry/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  substratee_proxy.rs  substratee_registry.rs  template.rs
runtime/src/weights/: frame_system.rs  mod.rs  pallet_balances.rs  pallet_claims.rs  pallet_enclave_bridge.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_sidechain.rs  pallet_sudo.rs  pallet_teeracle.rs  pallet_teerdays.rs  pallet_teerex.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs
runtime/wasm/: Cargo.lock.bak  Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
scripts/: benchmark_all_pallets.sh  build.sh  dump_wasm_state_and_spec.sh  enclave.json  init.sh  substraTeeProxy_events.txt  update_hardcoded_chain_specs.py  vesting-transfers.py
scripts/github/: lib.rb
sgx_externalities/: Cargo.toml
sr-tee-executor/: Cargo.toml
sr-tee-executor/src/: wasm_executor.rs
sr-tee-executor/wasm/: Cargo.toml
sr-tee-io/: Cargo.toml  with_sgx.rs  with_std.rs  without_sgx.rs  without_std.rs
sr-tee-io/src/: lib.rs
sr-tee-io/src/offchain/: http.rs
src/: chain_spec.rs  cli.rs  main.rs  service.rs
substratee-executor/: Cargo.toml
substratee-executor/src/: wasm_executor.rs
substratee-executor/wasm/: Cargo.toml
substratee-offchain/: Cargo.toml
substratee-offchain/src/: api.rs
