[workspace]
resolver = "2"
members = [
    'node',
    'runtime',
]

[profile.release]
panic = 'unwind'

[workspace.dependencies]
async-trait = "0.1.68"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.9.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
geojson = "0.22.2"
hex = "0.4.3"
log = "0.4.20"
maybe-async = { version = "0.2.7" }
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { features = ["derive"], version = "1.0.197" }
serde_json = "1.0.114"
tokio = { version = "1.33", features = ["rt-multi-thread", "macros", "time"] }

# integritee deps
pallet-claims = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-v1.13.0" }
pallet-enclave-bridge = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-v1.13.0" }
pallet-sidechain = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-v1.13.0" }
pallet-teeracle = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-v1.13.0" }
pallet-teerdays = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-v1.13.0" }
pallet-teerex = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-v1.13.0" }

# substrate deps
frame-benchmarking = { version = "35.0.0", default-features = false }
frame-benchmarking-cli = { version = "39.0.0" }
frame-executive = { version = "35.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.3.0", default-features = false }
frame-support = { version = "35.0.0", default-features = false }
frame-system = { version = "35.0.0", default-features = false }
frame-system-benchmarking = { version = "35.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "33.0.0", default-features = false }
frame-try-runtime = { version = "0.41.0", default-features = false }
hex-literal = { version = "0.4.1" }
jsonrpsee = { version = "0.22.0", features = ["server"] }
pallet-aura = { version = "34.0.0", default-features = false }
pallet-balances = { version = "36.0.0", default-features = false }
pallet-grandpa = { version = "35.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "23.0.0", default-features = false }
pallet-multisig = { version = "35.0.0", default-features = false }
pallet-preimage = { version = "35.0.0", default-features = false }
pallet-proxy = { version = "35.0.0", default-features = false }
pallet-scheduler = { version = "36.0.0", default-features = false }
pallet-sudo = { version = "35.0.0", default-features = false }
pallet-timestamp = { version = "34.0.0", default-features = false }
pallet-transaction-payment = { version = "35.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "37.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "35.0.0", default-features = false }
pallet-treasury = { version = "34.0.0", default-features = false }
pallet-utility = { version = "35.0.0", default-features = false }
pallet-vesting = { version = "35.0.0", default-features = false }
sc-basic-authorship = { version = "0.41.0" }
sc-chain-spec = "34.0.0"
sc-cli = { version = "0.43.0" }
sc-client-api = { version = "35.0.0" }
sc-consensus = { version = "0.40.0" }
sc-consensus-aura = { version = "0.41.0" }
sc-consensus-grandpa = { version = "0.26.0" }
sc-executor = { version = "0.39.0" }
sc-keystore = { version = "32.0.0" }
sc-network = { version = "0.41.0" }
sc-offchain = { version = "36.0.0" }
sc-rpc = "36.0.0"
sc-rpc-api = "0.40.0"
sc-service = { version = "0.42.0" }
sc-telemetry = { version = "21.0.0" }
sc-transaction-pool = { version = "35.0.0" }
sc-transaction-pool-api = { version = "35.0.0" }
sp-api = { version = "33.0.0", default-features = false }
sp-application-crypto = { version = "37.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-block-builder = { version = "33.0.0", default-features = false }
sp-blockchain = "35.0.0"
sp-consensus = { version = "0.39.0" }
sp-consensus-aura = { version = "0.39.0", default-features = false }
sp-consensus-grandpa = { version = "20.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-genesis-builder = { version = "0.14.0", default-features = false }
sp-inherents = { version = "33.0.0", default-features = false }
sp-io = { version = "37.0.0", default-features = false }
sp-keyring = "38.0.0"
sp-keystore = "0.40.0"
sp-offchain = { version = "33.0.0", default-features = false }
sp-rpc = "32.0.0"
sp-runtime = { version = "38.0.0", default-features = false }
sp-session = { version = "34.0.0", default-features = false }
sp-staking = { version = "33.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-timestamp = { version = "33.0.0" }
sp-transaction-pool = { version = "33.0.0", default-features = false }
sp-version = { version = "36.0.0", default-features = false }
substrate-frame-rpc-system = { version = "35.0.0" }

substrate-wasm-builder = "23.0.0"
substrate-build-script-utils = "11.0.0"

#[patch."https://github.com/integritee-network/pallets.git"]
#pallet-claims = { path = '../pallets/claims' }
#pallet-enclave-bridge = { path = '../pallets/enclave-bridge' }
#pallet-teerex = { path = '../pallets/teerex' }
#pallet-sidechain = { path = '../pallets/sidechain' }
#sgx-verify = { path = '../pallets/teerex/sgx-verify' }
#pallet-teeracle = { path = '../pallets/teeracle' }
#test-utils = { path = '../pallets/test-utils' }
#claims-primitives = { path = '../pallets/primitives/claims' }
#enclave-bridge-primitives = { path = '../pallets/primitives/enclave-bridge' }
#teerex-primitives = { path = '../pallets/primitives/teerex' }
#teeracle-primitives = { path = '../pallets/primitives/teeracle' }
#common-primitives = { path = '../pallets/primitives/common' }

[patch.crates-io]
ring = { git = "https://github.com/betrusted-io/ring-xous", branch = "0.16.20-cleanup" }
