[workspace]
resolver = "2"
members = [
    'node',
    'runtime',
]

[profile.release]
panic = 'unwind'

[workspace.dependencies]
async-trait = "0.1.68"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.9.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
geojson = "0.22.2"
hex = "0.4.3"
log = "0.4.20"
maybe-async = { version = "0.2.7" }
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { features = ["derive"], version = "1.0.197" }
serde_json = "1.0.114"
tokio = { version = "1.33", features = ["rt-multi-thread", "macros", "time"] }

# integritee deps
pallet-claims = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-enclave-bridge = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-sidechain = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-teeracle = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-teerdays = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-teerex = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }

# substrate deps
frame-benchmarking = { version = "40.2.0", default-features = false }
frame-benchmarking-cli = { version = "47.2.0" }
frame-executive = { version = "40.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
frame-system-benchmarking = { version = "40.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "36.0.0", default-features = false }
frame-try-runtime = { version = "0.46.0", default-features = false }
hex-literal = { version = "0.4.1" }
jsonrpsee = { version = "0.24.9", features = ["server"] }
pallet-aura = { version = "39.0.0", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-grandpa = { version = "40.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "28.0.0", default-features = false }
pallet-multisig = { version = "40.1.0", default-features = false }
pallet-preimage = { version = "40.0.0", default-features = false }
pallet-proxy = { version = "40.1.0", default-features = false }
pallet-scheduler = { version = "41.2.0", default-features = false }
pallet-sudo = { version = "40.0.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "43.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }
pallet-treasury = { version = "39.0.0", default-features = false }
pallet-utility = { version = "40.0.0", default-features = false }
pallet-vesting = { version = "40.1.0", default-features = false }
sc-basic-authorship = { version = "0.49.0" }
sc-chain-spec = "42.0.0"
sc-cli = { version = "0.51.1" }
sc-client-api = { version = "39.0.0" }
sc-consensus = { version = "0.48.0" }
sc-consensus-aura = { version = "0.49.0" }
sc-consensus-grandpa = { version = "0.34.0" }
sc-executor = { version = "0.42.0" }
sc-keystore = { version = "35.0.0" }
sc-network = { version = "0.49.2" }
sc-offchain = { version = "44.0.1" }
sc-rpc = "44.0.0"
sc-rpc-api = "0.48.0"
sc-service = { version = "0.50.0" }
sc-telemetry = { version = "28.1.0" }
sc-transaction-pool = { version = "39.0.0" }
sc-transaction-pool-api = { version = "39.0.0" }
sp-api = { version = "36.0.1", default-features = false }
sp-application-crypto = { version = "40.1.0", default-features = false }
sp-arithmetic = { version = "26.1.0", default-features = false }
sp-block-builder = { version = "36.0.0", default-features = false }
sp-blockchain = "39.0.0"
sp-consensus = { version = "0.42.0" }
sp-consensus-aura = { version = "0.42.0", default-features = false }
sp-consensus-grandpa = { version = "23.1.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-genesis-builder = { version = "0.17.0", default-features = false }
sp-inherents = { version = "36.0.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-keyring = "41.0.0"
sp-keystore = "0.42.0"
sp-offchain = { version = "36.0.0", default-features = false }
sp-rpc = "34.0.0"
sp-runtime = { version = "41.1.0", default-features = false }
sp-session = { version = "38.1.0", default-features = false }
sp-staking = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-timestamp = { version = "36.0.0" }
sp-transaction-pool = { version = "36.0.0", default-features = false }
sp-version = { version = "39.0.0", default-features = false }
substrate-frame-rpc-system = { version = "43.0.0" }

substrate-wasm-builder = "26.0.1"
substrate-build-script-utils = "11.0.0"

#[patch."https://github.com/integritee-network/pallets.git"]
#claims-primitives = { path = '../pallets/primitives/claims' }
#common-primitives = { path = '../pallets/primitives/common' }
#enclave-bridge-primitives = { path = '../pallets/primitives/enclave-bridge' }
#pallet-claims = { path = '../pallets/claims' }
#pallet-enclave-bridge = { path = '../pallets/enclave-bridge' }
#pallet-sidechain = { path = '../pallets/sidechain' }
#pallet-teeracle = { path = '../pallets/teeracle' }
#pallet-teerdays = { path = '../pallets/teerdays' }
#pallet-teerex = { path = '../pallets/teerex' }
#sgx-verify = { path = '../pallets/teerex/sgx-verify' }
#teeracle-primitives = { path = '../pallets/primitives/teeracle' }
#teerdays-primitives = { path = '../pallets/primitives/teerdays' }
#teerex-primitives = { path = '../pallets/primitives/teerex' }
#test-utils = { path = '../pallets/test-utils' }

[patch.crates-io]
ring = { git = "https://github.com/betrusted-io/ring-xous", branch = "0.16.20-cleanup" }
