[package]
name = "encointer-client"
version = "0.2.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

[dependencies]
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch="v2.0.0-alpha.5"}
log = "0.4"
env_logger = "0.7"
hex = "0.4"
json = "0.12.0"
substrate-bip39 = "0.3.1"
tiny-bip39 = "0.6.2"
serde_json      = { version = "1.0"}
clap            = { version = "2.33", features = [ "yaml" ] }
primitive-types = { version = "0.6.1", default-features = false, features = ["codec"] }
geojson = "0.17"
base58  = "0.1"

[dependencies.encointer-scheduler]
default-features = false
git = "https://github.com/encointer/pallet-encointer-scheduler"
tag = "v0.2.0"
package = "pallet-encointer-scheduler"

[dependencies.encointer-ceremonies]
default-features = false
git = "https://github.com/encointer/pallet-encointer-ceremonies"
tag = "v0.2.0"
package = "pallet-encointer-ceremonies"

[dependencies.encointer-currencies]
default-features = false
git = "https://github.com/encointer/pallet-encointer-currencies"
tag = "v0.2.0"
package = "pallet-encointer-currencies"

[dependencies.encointer-balances]
default-features = false
git = "https://github.com/encointer/pallet-encointer-balances"
tag = "v0.2.0"
package = "pallet-encointer-balances"

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
tag = "v0.5.4+sub_v0.1"
package = "substrate-fixed"

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.0"

[dependencies.primitives]
default-features = false
package = "sp-core"
version = "2.0.0-alpha.5"

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.keystore]
version = '2.0.0-alpha.5'
package = "sc-keystore"

[dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '2.0.0-alpha.5'

[dependencies.system]
default-features = false
version = '2.0.0-alpha.5'
package = 'frame-system'

[dependencies.encointer-node-runtime]
path = '../runtime'

[dependencies.keyring]
version = '2.0.0-alpha.5'
package = "sp-keyring"

[dependencies.app-crypto]
version = '2.0.0-alpha.5'
package = "sp-application-crypto"

#[patch.crates-io]
#ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}