[package]
name = "host_calls"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
sgx_tcrypto     = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_types       = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git" }

base64          = { version = "0.10" }
bit-vec         = { version = "0.6"  }
chrono          = { version = "0.4"  }
httparse        = { version = "1.3"  }
itertools       = { version = "0.7"  }
num-bigint      = { version = "0.2"  }
rustls          = { version = "0.15" }
serde_json      = { version = "1.0"  }
serde_derive    = { version = "1.0"  }
untrusted       = { version = "0.6"  }
webpki          = { version = "0.19" }
webpki-roots    = { version = "0.16" }
yasna           = { version = "0.3"  }

[features]
default = []
