[package]
authors = ["Integritee AG <hello@integritee.network>"]
build = 'build.rs'
description = 'Integritee Node for Solochain'
edition = '2021'
homepage = 'https://integritee.network/'
license = 'Apache-2.0'
name = 'integritee-node'
repository = 'https://github.com/integritee-network/integritee-node'
# Align major.minor revision with the runtimes, bump patch revision ad lib. Make this the github release tag.
version = '1.1.6'
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = 'integritee-node'

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
hex-literal = { workspace = true }

frame-system = { workspace = true }
pallet-transaction-payment = { default-features = false, workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }

# local dependencies
integritee-node-runtime = { path = '../runtime' }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = [
    "integritee-node-runtime/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
]
# for secure launch of a live solo network, do enable extrinsic filtering
extrinsic-filtering = ["integritee-node-runtime/extrinsic-filtering"]
